fixed bug on safari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@ main p {
 }
 
 .submit-btn, .initials-form {
-    width: 5%;
+    width: 150px;
     height: 100%;
 }
 
